<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <!--
this document is nav-graph
https://developer.android.com/guide/navigation/navigation-getting-started
-->

    <fragment
        android:id="@+id/navigation_home"
        android:name="li.xiaoxu.greendeco.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_maps"
            app:destination="@id/navigation_maps" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="li.xiaoxu.greendeco.ui.maps.MapsFragment"
        android:label="@string/title_activity_maps"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_navigation_maps_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sites"
        android:name="li.xiaoxu.greendeco.ui.sites.SitesFragment"
        android:label="@string/title_activity_sites"
        tools:layout="@layout/fragment_sites" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="li.xiaoxu.greendeco.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_navigation_sites"
            app:destination="@id/navigation_sites" />
    </fragment>
</navigation>