<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Name"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"/>
    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Retype Password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        />
    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/repassword"/>
    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnsignup"/>
    <Button
        android:id="@+id/btnWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnsignin"/>

</RelativeLayout>